Calendar - Rewire to new daos