@@ -1,43 +1,55 @@
 package com.github.saphyra.apphub.service.feature.calendar.domain.event.service;
 
 import com.github.saphyra.apphub.api.feature.calendar.model.response.EventResponse;
-import com.github.saphyra.apphub.service.feature.calendar.domain.event.deprecated_dao.DeprecatedEventDao;
-import com.github.saphyra.apphub.service.feature.calendar.domain.event_label_mapping.service.EventLabelMappingService;
+import com.github.saphyra.apphub.service.feature.calendar.domain.event.dao.Event;
+import com.github.saphyra.apphub.service.feature.calendar.domain.event.dao.EventDao;
+import com.github.saphyra.apphub.service.feature.calendar.domain.event_label_mapping.dao.EventLabelMappingDao;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 
 @Component
 @RequiredArgsConstructor
 @Slf4j
+//TODO unit test
 public class EventQueryService {
-    private final DeprecatedEventDao eventDao;
-    private final EventLabelMappingService eventLabelMappingService;
+    private final EventDao eventDao;
+    private final EventLabelMappingDao eventLabelMappingDao;
     private final EventMapper eventMapper;
 
     public List<EventResponse> getEvents(UUID userId, UUID labelId) {
-        return eventDao.getByUserId(userId)
-            .stream()
-            .filter(event -> isNull(labelId) || eventLabelMappingService.hasLabel(event.getEventId(), labelId))
-            .map(eventMapper::toResponse)
-            .collect(Collectors.toList());
+        List<Event> events;
+        if (isNull(labelId)) {
+            events = eventDao.getByUserId(userId);
+        } else {
+            List<UUID> eventIds = eventLabelMappingDao.getEventsOfLabel(userId, labelId);
+            events = eventDao.getByIds(userId, eventIds);
+        }
+
+        return eventMapper.toResponse(userId, events);
     }
 
     public List<EventResponse> getLabellessEvents(UUID userId) {
-        return eventDao.getByUserId(userId)
+        List<UUID> eventIds =  eventLabelMappingDao.getLabelsOfEventByUserId(userId)
+            .entrySet()
             .stream()
-            .filter(event -> eventLabelMappingService.getLabelIds(event.getEventId()).isEmpty())
-            .map(eventMapper::toResponse)
-            .collect(Collectors.toList());
+            .filter(entry -> entry.getValue().isEmpty())
+            .map(Map.Entry::getKey)
+            .toList();
+
+        return eventDao.getByIds(userId, eventIds)
+            .stream()
+            .map(event -> eventMapper.toResponse(event, List.of()))
+            .toList();
     }
 
-    public EventResponse getEvent(UUID eventId) {
-        return eventMapper.toResponse(eventDao.findByIdValidated(eventId));
+    public EventResponse getEvent(UUID userId, UUID eventId) {
+        return eventMapper.toResponse(eventDao.findByIdValidated(userId, eventId));
     }
 }
